--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,7 @@
 #shellcheck disable=SC2148,SC2155
 export SOPS_AGE_KEY_FILE="$HOME/.config/sops/age/keys.txt"
 export SOPS_AGE_RECIPIENTS=$(<.sops.pub.asc)
+export SAFE_FOLDER="$HOME/Vaults/Safe"
 export VIRTUAL_ENV="$(expand_path ./.venv)"
 PATH_add "$(expand_path ./.venv/bin)"
 PATH_add "$(expand_path ~/.local/bin)"
