--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -140,7 +140,7 @@
   executable = true
 [".local/bin/hugo"]
   type = "archive-file"
-  url = '{{ gitHubLatestReleaseAssetURL "gohugoio/hugo" (printf "hugo_extended_withdeploy_*%s_%s*" .chezmoi.os .chezmoi.arch) }}'
+  url = '{{ gitHubLatestReleaseAssetURL "gohugoio/hugo" (printf "hugo_extended_withdeploy_*%s-%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
   path = "hugo"
 # [".local/bin/eza"]
 #   type = "archive-file"
