--- a/private_dot_ssh/config
+++ b/private_dot_ssh/config
@@ -4,7 +4,7 @@ Host *
   ServerAliveCountMax 120                     # Disconnect after ~60 minutes of no response
   StrictHostKeyChecking no                    # Disable strict key checking (for flexibility)
   ControlMaster auto                          # Enable multiplexing
-  ControlPath ~/.ssh/control-socket-%r@%h-%p  # Path for the multiplexing socket
+  ControlPath ~/.ssh/control-sockets/%r@%h-%p # Path for the multiplexing socket
   ControlPersist 600                          # Keep multiplexed sessions open for 10 minutes
   AddKeysToAgent yes                          # Automatically add keys to the SSH agent
   ForwardAgent yes                            # Forward the authentication agent connection
