some rework with bitwarden and manjaro packages

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -4,3 +4,9 @@ packages:
     - 'git'
     casks:
     - 'google-chrome'
+  arch:
+    yay:
+    - 'pinentry'
+    - 'git'
+    - 'kubeconform'
+    - 'moreutils'
