split secrets to keepassxc and bitwarden

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -6,7 +6,8 @@ packages:
     - 'google-chrome'
   arch:
     yay:
-    - 'pinentry'
     - 'git'
+    - 'keepassxc'
     - 'kubeconform'
     - 'moreutils'
+    - 'pinentry'
