some package rework

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -11,3 +11,15 @@ packages:
     - 'kubeconform'
     - 'moreutils'
     - 'pinentry'
+  ubuntu:
+    apt:
+    - 'git'
+    - 'keepassxc'
+    - 'moreutils'
+    - 'pinentry-curses'
+  epam_wsl:
+    apt:
+    - 'git'
+    - 'keepassxc'
+    - 'moreutils'
+    - 'pinentry-curses'
