fixed vault url

--- a/dot_config/rbw/config.json
+++ b/dot_config/rbw/config.json
@@ -1,1 +1,1 @@
-{"email":"dxas90@gmail.com","sso_id":null,"base_url":"https://vaultwarden.xome.duckdns.org","identity_url":null,"ui_url":null,"notifications_url":null,"lock_timeout":3600,"sync_interval":3600,"pinentry":"pinentry","client_cert_path":null}
+{"email":"dxas90@gmail.com","sso_id":null,"base_url":"https://vault.5rv.me","identity_url":null,"ui_url":null,"notifications_url":null,"lock_timeout":3600,"sync_interval":3600,"pinentry":"pinentry","client_cert_path":null}
