--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,6 +1,11 @@
-[".local/bin/jq"]
+{{- if .extra_tools -}}
+[".linkerd2/bin/linkerd"]
   type = "file"
-  url = '{{ gitHubLatestReleaseAssetURL "jqlang/jq" (printf "jq-%s-%s*" .chezmoi.os .chezmoi.arch ) }}'
+  url = "https://github.com/linkerd/linkerd2/releases/download/edge-{{ .tools.linkerd2.version }}/linkerd2-cli-edge-{{ .tools.linkerd2.version }}-{{ .chezmoi.os }}-{{ .chezmoi.arch }}"
+  executable = true
+[".linkerd2/bin/linkerd-smi"]
+  type = "file"
+  url = '{{ gitHubLatestReleaseAssetURL "linkerd/linkerd-smi" (printf "linkerd-smi-*-%s-%s*" .chezmoi.os .chezmoi.arch ) }}'
   executable = true
 [".local/bin/bw"]
   type = "archive-file"
@@ -11,6 +16,25 @@
   type = "archive-file"
   url = "https://github.com/bitwarden/sdk-sm/releases/download/bws-v{{ .tools.bws.version }}/bws-x86_64-unknown-{{ .chezmoi.os }}-gnu-{{ .tools.bws.version }}.zip"
   path = "bws"
+  executable = true
+[".local/bin/flux"]
+  type = "archive-file"
+  url = "https://github.com/fluxcd/flux2/releases/download/v{{ .tools.flux.version }}/flux_{{ .tools.flux.version }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.tar.gz"
+  path = "flux"
+  executable = true
+[".local/bin/hugo"]
+  type = "archive-file"
+  url = '{{ gitHubLatestReleaseAssetURL "gohugoio/hugo" (printf "hugo_extended_withdeploy_*%s-%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
+  path = "hugo"
+[".local/bin"]
+  type = "archive"
+  url = '{{ gitHubLatestReleaseAssetURL "nushell/nushell" (printf "nu-*-x86_64-unknown-%s-gnu*" .chezmoi.os) }}'
+  exact = false
+  stripComponents = 1
+{{ end -}}
+[".local/bin/jq"]
+  type = "file"
+  url = '{{ gitHubLatestReleaseAssetURL "jqlang/jq" (printf "jq-%s-%s*" .chezmoi.os .chezmoi.arch ) }}'
   executable = true
 [".local/bin/terraform"]
   type = "archive-file"
@@ -32,11 +56,6 @@
 [".local/bin/autok3s"]
   type = "file"
   url = '{{ gitHubLatestReleaseAssetURL "cnrancher/autok3s" (printf "autok3s_%s_%s*" .chezmoi.os .chezmoi.arch) }}'
-  executable = true
-[".local/bin/flux"]
-  type = "archive-file"
-  url = "https://github.com/fluxcd/flux2/releases/download/v{{ .tools.flux.version }}/flux_{{ .tools.flux.version }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.tar.gz"
-  path = "flux"
   executable = true
 [".local/bin/age"]
   type = "archive-file"
@@ -114,14 +133,6 @@
   path = "lazygit"
 {{ end -}}
 
-[".linkerd2/bin/linkerd"]
-  type = "file"
-  url = "https://github.com/linkerd/linkerd2/releases/download/edge-{{ .tools.linkerd2.version }}/linkerd2-cli-edge-{{ .tools.linkerd2.version }}-{{ .chezmoi.os }}-{{ .chezmoi.arch }}"
-  executable = true
-[".linkerd2/bin/linkerd-smi"]
-  type = "file"
-  url = '{{ gitHubLatestReleaseAssetURL "linkerd/linkerd-smi" (printf "linkerd-smi-*-%s-%s*" .chezmoi.os .chezmoi.arch ) }}'
-  executable = true
 [".local/bin/bat"]
   type = "archive-file"
   {{ $batVersion := (gitHubLatestRelease "sharkdp/bat").TagName }}
@@ -150,15 +161,6 @@
   type = "file"
   url = "https://raw.githubusercontent.com/sivel/speedtest-cli/master/speedtest.py"
   executable = true
-[".local/bin/hugo"]
-  type = "archive-file"
-  url = '{{ gitHubLatestReleaseAssetURL "gohugoio/hugo" (printf "hugo_extended_withdeploy_*%s-%s.tar.gz" .chezmoi.os .chezmoi.arch) }}'
-  path = "hugo"
-[".local/bin"]
-  type = "archive"
-  url = '{{ gitHubLatestReleaseAssetURL "nushell/nushell" (printf "nu-*-x86_64-unknown-%s-gnu*" .chezmoi.os) }}'
-  exact = false
-  stripComponents = 1
 [".local/bin/eza"]
   type = "archive-file"
   url = '{{ gitHubLatestReleaseAssetURL "eza-community/eza" (printf "eza_x86_64-unknown-%s-gnu.zip" .chezmoi.os) }}'
