--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -66,6 +66,10 @@
   url = "https://releases.hashicorp.com/terraform/{{ .tools.terraform.version }}/terraform_{{ .tools.terraform.version }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.zip"
   path = "terraform"
   executable = true
+[".local/bin/terragrunt"]
+  type = "file"
+  url = '{{ gitHubLatestReleaseAssetURL "gruntwork-io/terragrunt" (printf "terragrunt_%s_%s*" .chezmoi.os .chezmoi.arch) }}'
+  executable = true
 [".local/bin/direnv"]
   type = "file"
   url = "https://github.com/direnv/direnv/releases/download/v{{ .tools.direnv.version }}/direnv.{{ .chezmoi.os }}-{{ .chezmoi.arch }}"
